Fixing body not fitting width on smaller displays.

--- a/output.css
+++ b/output.css
@@ -18,6 +18,7 @@ body {
   z-index: 1;
   width: 100vw;
   position: absolute;
+  overflow: auto;
 }
 
 span {
@@ -195,7 +196,7 @@ nav {
 }
 
 .container {
-  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
   width: 60vw;
   z-index: 10;
 }
@@ -285,6 +286,7 @@ nav {
 }
 
 .project {
+  border: green 1px solid;
   justify-content: center;
   align-items: center;
   gap: 2rem;
@@ -305,6 +307,7 @@ nav {
 }
 
 .project-details {
+  border: green 1px solid;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -836,10 +839,44 @@ nav {
   .header {
     justify-content: space-around;
   }
+  .project {
+    border: yellow 1px solid;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    margin-bottom: 30px;
+    z-index: 10;
+  }
+  .project img {
+    height: auto;
+    width: 100vw;
+    transition: all 0.5s ease;
+    z-index: 10;
+  }
+  .project-details {
+    border: green 1px solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+    z-index: 10;
+  }
+  .project-title {
+    font-size: 5vw;
+    margin-bottom: 0;
+  }
+  .project-altag {
+    margin-bottom: 0;
+    font-size: 4vw;
+  }
+  .project-desc {
+    font-size: 3vw;
+  }
 }
-/* Medium devices such as tablets (768px and up) */
-/* Large devices such as laptops (1024px and up) */
-@media only screen and (min-width: 1024px) {
+/* Large devices such as laptops (900px and up) */
+@media only screen and (min-width: 700px) {
   .container {
     border: red 1px solid;
     width: 60%;
@@ -847,7 +884,58 @@ nav {
   .header {
     justify-content: end;
   }
+  .project-list {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 8vh;
+    z-index: 10;
+  }
+  .project {
+    border: green 1px solid;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    height: 80vh;
+    margin-bottom: 30px;
+    z-index: 10;
+  }
+  .project img {
+    height: auto;
+    width: 60%;
+    transition: all 0.5s ease;
+    z-index: 10;
+  }
+  .project img:hover {
+    transform: scale(1.03);
+  }
+  .project-details {
+    border: green 1px solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+    z-index: 10;
+  }
+  .project-title {
+    font-size: 2.2rem;
+    margin-bottom: 0;
+  }
+  .project-altag {
+    margin-bottom: 0;
+    font-size: 1.5rem;
+  }
+  .project-desc {
+    font-size: 1.1rem;
+  }
+  .project-img-right {
+    box-shadow: 10px 10px 0px 0px var(--primary1);
+  }
+  .project-img-left {
+    box-shadow: -10px 10px 0px 0px var(--primary1);
+  }
 }
-/* Largest devices such as desktops (1280px and up) */
 
 /*# sourceMappingURL=output.css.map */
