--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ body{
   z-index: 1;
   width: 100vw;
   position: absolute;
+  overflow:auto;
 }
 
 span{
@@ -197,7 +198,7 @@ nav{
 
 .container{
 
-  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
   width: 60vw;
   z-index: 10;
 }
@@ -299,6 +300,8 @@ nav{
 }
 
 .project{
+  border: green 1px solid;
+
   justify-content: center;
   align-items: center;
   gap: 2rem;
@@ -319,6 +322,8 @@ nav{
 }
 
 .project-details{
+  border: green 1px solid;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -855,15 +860,54 @@ nav{
   .header{
     justify-content: space-around;
   }
-}
 
-/* Medium devices such as tablets (768px and up) */
-@media only screen and (min-width: 768px) {
+  .project{
+    border: yellow 1px solid;
   
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    margin-bottom: 30px;
+    z-index: 10;
+  }
+
+  .project img{
+    height: auto;
+    width: 100vw;
+    transition: all .5s ease;
+    z-index: 10;
+  }
+
+  .project-details{
+    border: green 1px solid;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+    z-index: 10;
+  }
+  
+  .project-title{
+    font-size: 5vw;
+    margin-bottom: 0;
+  }
+  
+  .project-altag{
+    margin-bottom: 0;
+    font-size: 4vw;
+  }
+  
+  .project-desc{
+    font-size: 3vw;
+  }
+
 }
 
-/* Large devices such as laptops (1024px and up) */
-@media only screen and (min-width: 1024px) {
+/* Large devices such as laptops (900px and up) */
+@media only screen and (min-width: 700px) {
   .container{
     border: red 1px solid;
     width: 60%;
@@ -872,9 +916,67 @@ nav{
   .header{
     justify-content: end;
   }
-}
 
-/* Largest devices such as desktops (1280px and up) */
-@media only screen and (min-width: 1280px) {
-
+  .project-list{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 8vh;
+    z-index: 10;
+  }
+  
+  .project{
+    border: green 1px solid;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    height: 80vh;
+    margin-bottom: 30px;
+    z-index: 10;
+  }
+  
+  .project img{
+    height: auto;
+    width: 60%;
+    transition: all .5s ease;
+    z-index: 10;
+  }
+  
+  .project img:hover{
+    transform: scale(1.03);
+  }
+  
+  .project-details{
+    border: green 1px solid;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+    z-index: 10;
+  }
+  
+  .project-title{
+    font-size: 2.2rem;
+    margin-bottom: 0;
+  }
+  
+  .project-altag{
+    margin-bottom: 0;
+    font-size: 1.5rem;
+  }
+  
+  .project-desc{
+    font-size: 1.1rem;
+  }
+  
+  .project-img-right{
+    box-shadow: 10px 10px 0px 0px var(--primary1);
+  }
+  
+  .project-img-left{
+    box-shadow: -10px 10px 0px 0px var(--primary1);
+  }
 }
